[package]
name = "chimitheque_zmq_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
env_logger = "0.10.0"
governor = "0.10.1"
log = "0.4.20"
clap = { version = "4.4", features = ["derive"] }
erased-serde = "0.3.31"
ctrlc = "3.4"

chimitheque_utils = { path = "../chimitheque_utils" }
chimitheque_db = { path = "../chimitheque_db" }
chimitheque_types = { path = "../chimitheque_types" }
chimitheque_pubchem = { path = "../chimitheque_pubchem" }
